new changes to production

--- a/views/Login.ejs
+++ b/views/Login.ejs
@@ -87,7 +87,7 @@
   <body>
     <div class="overall">
       <div class="form">
-        <img src="../assets/logo.png" style="width: 65%; height: auto;"/>
+        <img src="/assets/logo.png" style="width: 65%; height: auto;"/>
         <h4 class="title">Entrez dans votre compte</h4>
         <form id="loginForm">
           <div class="form-input">
