New changes from desktop

--- a/views/Data.ejs
+++ b/views/Data.ejs
@@ -401,13 +401,37 @@
             <label for="corridor">Corridor</label>
             <!--<input type="text" id="corridor" name="corridor" disabled>-->
             <select id="corridor" name="corridor">
-              <option value="BJM-GTB">BJM-GTB</option>
-                      <option value="KYZ-GTB Via BJM">KYZ-GTB Via BJM</option>
-                      <option value="KBR-BJM Via KYZ">KBR-BJM Via KYZ</option>
-                      <option value="KBR-BJM Via GTG">KBR-BJM Via GTG</option>
-                      <option value="KBR-KYZ">KBR-KYZ</option>
-                      <option value="KYZ-BJM">KYZ-BJM</option>
-                      <option value="KBR-GTG">KBR-GTG</option>
+              <option value="">Choisir le corridor</option>
+              <option value="BJM">BJM</option>
+                    <option value="BJM-GTB">BJM-GTB</option>
+                    <option value="BJM-MGN">BJM-MGN</option>
+                    <option value="BJM-BUGARAMA-KANYARU">BJM-BUGARAMA-KANYARU</option>
+                    <option value="BJM-KBR">BJM-KBR</option>
+                    <option value="BJM-RUHWA">BJM-RUHWA</option>
+                    <option value="BJM-VGZ">BJM-VGZ</option>
+                    <option value="GASENYI-BJM VIA KYZ">GASENYI-BJM VIA KYZ</option>
+                    <option value="GASENYI-GTB">GASENYI-GTB</option>
+
+                    <option value="GTG">GTG</option>
+                    <option value="KANYARU-BUGARAMA-BJM New">KANYARU-BUGARAMA-BJM New</option>
+                    <option value="KANYARU-GTB">KANYARU-GTB</option>
+                    <option value="KANYARU-GTG VIA BUGARAMA">KANYARU-GTG VIA BUGARAMA</option>
+                    <option value="KANYARU-GTG VIA NGOZI">KANYARU-GTG VIA NGOZI</option>
+                    <option value="KANYARU-KYZ">KANYARU-KYZ</option>
+                    <option value="KANYARU-BJM">KANYARU-BJM</option>
+                    <option value="KANYARU-GTB VIA BJM">KANYARU-GTB VIA BJM</option>
+
+                    <option value="KBR-BJM VIA MWARO">KBR-BJM VIA MWARO</option>
+                    <option value="KBR-GTB VIA BJM">KBR-GTB VIA BJM</option>
+                    <option value="KBR-GTG VIA NGOZI">KBR-GTG VIA NGOZI</option>
+                    <option value="KBR-MGN VIA BJM">KBR-MGN VIA BJM</option>
+
+                    <option value="KYZ-GTB Via BJM">KYZ-GTB Via BJM</option>
+                    <option value="KBR-BJM Via KYZ">KBR-BJM Via KYZ</option>
+                    <option value="KBR-BJM Via GTG">KBR-BJM Via GTG</option>
+                    <option value="KBR-KYZ">KBR-KYZ</option>
+                    <option value="KYZ-BJM">KYZ-BJM</option>
+                    <option value="KBR-GTG">KBR-GTG</option>
             </select>
     
             <label for="type_de_vehicule">Type de Vehicule</label>
@@ -415,6 +439,8 @@
             <select id="type_de_vehicule" name="type_de_vehicule">
                         <option value="Vehicule a moteur">Vehicule a moteur</option>
                         <option value="Camion">Camion</option>
+                        <option value="Camion citerne">Camion citerne</option>
+                        <option value="Train">Train</option>
             </select>
     
             <label for="immatriculation">Immatriculation</label>
